refactoring (#1)
* refactoring to make 'printing' of objects more abstract so different types of output are possible. eg: HTML, Java, etc.

* refactoring to remove and simplify hierarchy of classes through interfaces and abstract classes

* added google formatter library and added to code
updated README.md since some IDE configuration is required to get it to run
added code to generate toString for Entity, may not be safe in all situations. need to disregard FKs and collections

* restructured dbmapping.xml so that there is a CUSTOM and ALL section
added toString, equals and hashCode methods (very rough as composite keys need work)

* -updated hashCode, toString and equals code generation to work with composite keys

* applied minor change

* fixed some issues with the generation of FKs
updated how TableWrapper creates columns, fks, pks
now generates composite keys
now outputs tables as files, still need to do composite ids, but plumbing is there
App.java needs to be cleaned up

* fixed issue with columns being output 2x for Entity
changed variable name for equals generation
removed unused params to hashCodeGenerator

* FKs not output as part of constructor(s), field and getter/setter.
removed unused imports and fixed some java code quality issues.

* -simple processing/detection of @OneToOne and @ManyToOne by checking if FK is unique

* output of Repository files and changes to dao.ftl

* removed unused imports

* first attempt at bi-directional mapping for @OneToMany

* some refactoring to get OneToMany associations working better
fixed issue with CascadeType.ALL being quoted in output and not imported